--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<span>{{title}} App </span>
+<span>{{title}} App </span> <br>
+<input type="text" placeholder="Enter Quote">
+
 
 <router-outlet></router-outlet>
