--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,3 @@
 <p>Enter your Quote</p>
-<input type="text" [id]="date" placeholder="Enter Quote" value=""><br><br>
+<input type="text" id="quote" placeholder="Enter Quote" value=""><br><br>
 <button (click)="onClick" >Post <br>Quote</button>
