Input element changed to text area element

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,3 @@
 <p>Enter your Quote</p>
-<input type="text" id="quote" placeholder="Enter Quote" value=""><br><br>
+<textarea id="quote" placeholder="Enter Quote" value="" ></textarea><br><br>
 <button (click)="onClick" >Post <br>Quote</button>
