form componet styled

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,7 @@
+<div class="form" >
+  <div class="qhead" >
 <p>Enter your Quote</p>
-<textarea id="quote" placeholder="Enter Quote" value="" ></textarea><br><br>
+</div>
+<textarea id="quote" placeholder="Enter Quote" value=""></textarea><br><br>
 <button (click)="onClick" >Post <br>Quote</button>
+</div>
