--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,9 +1,10 @@
 .form{
-  background-color: blanchedalmond;
+  background-color: grey;
+  padding: 100px;
 }
 .qhead{
   background-color: whitesmoke;
-  
+
 }
 #quote{
   text-align: center;
