quote details button added

--- a/src/app/qdisplay/qdisplay.component.html
+++ b/src/app/qdisplay/qdisplay.component.html
@@ -4,5 +4,6 @@
     {{quotenumber + 1}}
   {{i}}
   <button (click)= "onDelete(quotenumber)" >Remove Quote</button>
+  <div class="details" >Quote Details</div>
 </div>
 </div>
