--- a/src/app/qdisplay/qdisplay.component.css
+++ b/src/app/qdisplay/qdisplay.component.css
@@ -2,3 +2,11 @@
   padding: 100px;
   text-align: center;
 }
+.details{
+  background-color: blue;
+  color: white;
+  text-align: center;
+  height: 25px;
+  width: 100px;
+  border-radius: 10pt;
+}
