--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -3,9 +3,10 @@
 <p>Enter your Quote</p>
 </div>
 <form class="form-control">
-<textarea #box [placeholder]= "Quote" value=""></textarea><br><br>
+<textarea #box cols="30" [placeholder]= "Quote" rows="10" value=""></textarea><br><br>
 <button class="btn" (click)= "postQuote(box.value)" >Post <br>Quote</button>
 </form>
+
 
 </div>
 <app-qdisplay [quotes]= "quote"></app-qdisplay>
