form background image set to linear gradient

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,10 +1,13 @@
 .form{
-  background-color: grey;
+  background-image: linear-gradient( green,blue);
   padding: 100px;
+  border-radius: 50px;
 }
 .qhead{
   background-color: whitesmoke;
-
+  color: blue;
+  width: 50%;
+  
 }
 #quote{
   text-align: center;
