--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div class="form" >
   <div class="qhead" >
-<p>Enter your Quote</p>
+<h2>Enter your Quote</h2>
 </div>
 <form class="form-control">
 <textarea #box cols="30" [placeholder]= "Quote" rows="10" value=""></textarea><br><br>
