--- a/src/app/qdisplay/qdisplay.component.css
+++ b/src/app/qdisplay/qdisplay.component.css
@@ -5,11 +5,11 @@ h1{
   flood-opacity: 120%;
 }
 .qdisplay{
-  padding: 150px;
+  padding: 0.7rem;
   text-align: center;
   background-image:repeating-linear-gradient(whitesmoke, grey);
-  width:50%;
-  float:right
+  width:100%;
+  border-radius: 10px;
   
 }
 .quoted{
