--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -4,10 +4,10 @@
   border-radius: 50px;
   
 }
-#quote{
+textarea{
   text-align: center;
 
 }
 input{
-  align-content: center;
+  text-align-last: center;
 }
